@startuml
skinparam classAttributeIconSize 0
skinparam ArrowFontStyle plain
hide empty members

abstract class Command {
    + execute(inventory: Inventory, ui: Ui, customerList: CustomerList) {abstract}
}

class AddCommand {
    + COMMAND_WORD: String = "add"
    - name: String
    - dosage: String
    - quantity: int
    - expiryDate: String
    - tag: String
    - dosageForm: String
    - manufacturer: String
    - directions: String
    - frequency: String
    - route: String
    - maxDailyDose: String
    - warnings: ArrayList<String>

    + AddCommand(...)
    + execute(inventory: Inventory, ui: Ui, customerList: CustomerList)
}

class Medication {
    + Medication(name: String, dosage: String, quantity: int, expiryDate: String, tag: String)
    + setDosageForm(dosageForm: String)
    + setManufacturer(manufacturer: String)
    + addWarning(warning: String)
    ' ... other setters
}

class Inventory {
    - medications: ArrayList<Medication>
    - medicationCount: int
    + addMedication(medication: Medication)
    + getMedicationCount(): int
}

class Ui {
    + printAddedMessage(med: Medication, inventory: Inventory)
}

class CustomerList {
    - customers: ArrayList<Customer>
    - customerCount: int
}

Command <|-- AddCommand : inherits
AddCommand ..> Medication : creates >
AddCommand ..> Inventory : adds to >
AddCommand ..> Ui : updates >
AddCommand ..> CustomerList : receives >

@enduml